--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -78,3 +78,17 @@ p.my-title{
     border-top-right-radius:4px;
     border-bottom-left-radius:0;
 }
+
+img.shadow {
+    -webkit-box-shadow: 0 0 4px 1px rgba(0, 0, 0, .5);
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, .5);
+}
+.feet-box {
+    border-width: 5px 0 0 0 ;
+    border-style: solid none none none;
+    border-radius: 5px 5px 0 0;
+    border-top-color: #27C24C;
+    margin:15px 0 0 0;
+    padding:23px;
+    background: #0583CA;
+}
