--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -7,7 +7,6 @@ body {
 }
 
 
-
 .CarouselImg {
     margin: 0 auto;
     position: relative;
@@ -33,7 +32,7 @@ hr {
     padding: 0;
 }
 
-.border1{
+.border1 {
     border-radius: 15px;
     border: 1px solid #bebebe;
     padding: 20px;
@@ -41,54 +40,106 @@ hr {
 }
 
 
-.nav-font-style{
+.nav-font-style {
     font-size: 20px;
     font-weight: bold;
 }
 
-p.my-title{
-    font-size: 18px;
+p.my-title {
+    font-size: 20px;
     color: #337AD9;
-    border: 2px  transparent;
-    border-bottom-style:solid;
-    Padding: 5px   2em  14px  0;
+    border: 2px transparent;
+    border-bottom-style: solid;
+    Padding: 5px 2em 14px 0;
     border-image: linear-gradient(to right, #0b5ed7, #EEEEEE 90%);
     border-image-slice: 10;
 }
-.badge.badge-date{
+
+.badge.badge-date {
     font-weight: lighter;
     font-size: 5px;
     position: relative;
     top: 100%;
-    transform: translateY(55%);
+    transform: translateY(30%);
 }
+
 .list-group-horizontal .list-group-item {
     display: inline-block;
 }
+
 .list-group-horizontal .list-group-item {
     margin-bottom: 0;
-    margin-left:-4px;
+    margin-left: -4px;
     margin-right: 0;
 }
+
 .list-group-horizontal .list-group-item:first-child {
-    border-top-right-radius:0;
-    border-bottom-left-radius:4px;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 4px;
 }
+
 .list-group-horizontal .list-group-item:last-child {
-    border-top-right-radius:4px;
-    border-bottom-left-radius:0;
+    border-top-right-radius: 4px;
+    border-bottom-left-radius: 0;
 }
 
 img.shadow {
     -webkit-box-shadow: 0 0 4px 1px rgba(0, 0, 0, .5);
     box-shadow: 0 0 5px 2px rgba(0, 0, 0, .5);
 }
+
 .feet-box {
-    border-width: 5px 0 0 0 ;
+    border-width: 5px 0 0 0;
     border-style: solid none none none;
     border-radius: 5px 5px 0 0;
     border-top-color: #27C24C;
-    margin:15px 0 0 0;
-    padding:23px;
+    margin: 15px 0 0 0;
+    padding: 23px;
     background: #0583CA;
+}
+
+.side-title {
+    border-width: 0 0 1px 10px;
+    border-style: solid;
+    border-color: #0f75b2;
+    margin-bottom: 15px;
+}
+
+.channel-text {
+    /*margin-right: ;*/
+    text-overflow: ellipsis;
+    overflow: hidden;
+    font-size: 18px;
+}
+
+p.channel-subchannel {
+    overflow: hidden;
+}
+
+.list-group > .list-group-item {
+    font-size: 16px;
+}
+
+.list-group > a {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    font-size: 18px;
+}
+
+.nav-tabs a {
+    font-size: 16px;
+}
+
+.nav-tabs {
+    background-color: #DDFFFF
+}
+
+#side-content > .list-group-item {
+    border-style: none none dotted none;
+    border-width: 2px;
+    border-bottom-color: #999999;
+    margin-top: 0;
+    padding-bottom: 0;
+
 }
