--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -10,9 +10,9 @@ body {
 .CarouselImg {
     margin: 0 auto;
     position: relative;
-    width: 85%;
-    height: 0;
-    padding-top: 80%;
+    /*width: 85%;*/
+    /*height: 0;*/
+    /*padding-top: 80%;*/
 }
 
 hr {
