--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -49,7 +49,9 @@ hr {
     font-size: 20px;
     font-weight: bold;
     text-shadow: 1px 1px 1px  rgb(2, 43, 14);
+    letter-spacing: 2px;		/* 设置文字间距 */
 }
+
 
 p.Channel-title {
     font-size: 20px;
@@ -128,7 +130,7 @@ img.shadow {
 }
 
 
-.nav-tabs {
+.child-channel {
     background-color: #DDFFFF
 }
 
@@ -166,4 +168,14 @@ img.shadow {
     width: 100%;
     border-radius: 10px;
     margin-bottom: 3px;
+}
+#sub-nav a{
+    /*color: #333;			!* 设置文本颜色 *!*/
+    font-weight: lighter;
+    font-size: 16px;
+    /*background-color: #f2f2f2;		!* 设置背景颜色 *!*/
+    /*border: 1px solid #ccc;		!* 设置边框样式 *!*/
+    /*padding: 10px 20px;			!* 设置内边距 *!*/
+    border-radius: 5px;			/* 设置圆角矩形 */
+    letter-spacing: 1px;		/* 设置文字间距 */
 }
