--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -214,7 +214,8 @@ p.Channel-title {
     max-height: 200px;
 
 }
-#carousel_leader, #carousel_timeline{
+
+#carousel_leader, #carousel_timeline {
     position: absolute;
     top: 50%;
     transform: translate(0, 30%);
@@ -254,4 +255,10 @@ p.Channel-title {
     z-index: -2;
     max-width: 100%;
     max-height: 100%;
+}
+
+.test {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
 }
