--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -63,9 +63,9 @@ hr {
 }
 
 
-.badge-new{
+.badge-new {
     /*color: red;*/
-    background-color:mediumvioletred;
+    background-color: mediumvioletred;
     font-weight: lighter;
     /*font-size: 10px;*/
     position: relative;
@@ -367,7 +367,30 @@ p.Channel-title {
     font-size: 18px;
     line-height: 27px
 }
-#article_content img{
+
+#article_content img {
     max-width: 800px;
     max-height: 600px;
+}
+
+.topic {
+    position: relative;
+    margin-top: 25px;
+    padding-bottom: 30px;
+    width: 100%;
+    height: 95px;
+}
+
+.topic img {
+    position: relative;
+    z-index: auto;
+}
+.topic h2{
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translate(-50%,0);
+    z-index: 2;
+    color:azure;
+    text-shadow: 1px 2px 1px rgb(2, 43, 14);
 }
